# swarm_factory

./: Cargo.toml  README.md
configuration/: agent_judge_config.toml  mcp_runtime_config.toml
configuration/prompts/: detailed_workflow_agent_prompt.txt  high_level_plan_workflow_agent_prompt.txt  judge_agent_prompt.txt
src/: main.rs
